--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 Mimi = "e4e893b0-ee5e-52ea-8111-44b3bdec128c"
+MimiCIAM = "b45ee815-fc06-4684-baf4-cf48c9e39180"
 NetCDF = "30363a11-5582-574a-97bb-aa9a979735b9"
 Query = "1a8c2f83-1ff3-5112-b086-8aa67b057ba1"
 RData = "df47a6cb-8c03-5eed-afd8-b6050d6c41da"
