--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ DataDeps = "124859b0-ceae-595e-8997-d05f6a7a8dfe"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Mimi = "e4e893b0-ee5e-52ea-8111-44b3bdec128c"
 MimiCIAM = "b45ee815-fc06-4684-baf4-cf48c9e39180"
 NetCDF = "30363a11-5582-574a-97bb-aa9a979735b9"
