--- a/Project.toml
+++ b/Project.toml
@@ -12,3 +12,4 @@ Query = "1a8c2f83-1ff3-5112-b086-8aa67b057ba1"
 RData = "df47a6cb-8c03-5eed-afd8-b6050d6c41da"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
+ZipFile = "a5390f91-8eb1-5f08-bee0-b1d1ffed6cea"
